Javadoc ready except for customer class;